     2 - sp_executesql is used
     3 - sp_prepare is used in conjunction with sp_execute
     4 (not implemented) - sp_prepexec is used in conjunction with sp_execute
   Update the FAQ to include this new information.
 o Corrected bug with sp_prepare/sp_execute logic where statements without
   parameters were being sent as raw SQL even though the SQL was prepared with
   sp_prepare.

08/05/2004 - David Kilzer
 o Added missing javadoc to DriverUnitTest methods.
 o Renamed Messages.defaultResource to Messages.DEFAULT_RESOURCE to reflect its
   use.
 o Refactored Driver.getPropertyInfo() so that properties are not hard-coded.
   Added Messages.loadDriverProperties() method.  Wrote additional unit tests
   for Driver.getPropertyInfo() in DriverUnitTest.  Added more utility methods
   to UnitTestBase.

08/05/2004 - Brian Heineman
 o Applied Mike Hutchinson's patch for [996631] Refactoring and some performance
   optimization.
 o Removed extraneous import statements.
 o Added check in data conversion for LOB values with a length greater than
   2,147,483,647.
 o Added "and Sybase" to JtdsDatabaseMetaData.getDriverName().

08/04/2004 - Brian Heineman
 o Applied patch in bug [1003507] Cursor result set close error;
   (thanks to Mike Hutchinson for report and the fix).
 o Removed assertEquals(double,double) to avoid Eclipse execution failures.

08/04/2004 - David Kilzer
 o Renamed Settings class to DefaultProperties to match its use.  Removed
   redundant "DEFAULT_" prefix from its public static constants.
 o Refactored DefaultProperties to remove duplicate code.
 o Created DefaultPropertiesUnitTest to test new methods in DefaultProperties.
 o Moved methods related to Messages.propertes from Support class to new
   Messages class.  Support.getMessage() is now Messages.get().
 o Wrote unit test for Driver.getPropertyInfo() in preparation for future
   refactoring.

08/03/2004 - Brian Heineman
 o Applied patch in bug [1002811] Poor performance of cursor result sets;