@@ -22,6 +22,8 @@ Changes from jTDS 0.8.1
  o Corrected bug with sp_prepare/sp_execute logic where statements without
    parameters were being sent as raw SQL even though the SQL was prepared with
    sp_prepare.
+ o Corrected bug introduced with early work where the temporary stored procedure
+   name may not have been unique for the connection.
 
 08/05/2004 - David Kilzer
  o Added missing javadoc to DriverUnitTest methods.
